--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -10,6 +10,13 @@
 /* -----------------------------------------
    Shared Styles
 ----------------------------------------- */
+ul.todo {
+  list-style: disc inside;
+}
+.events a.button {
+  margin-right: 15px;
+  margin-bottom: 15px;
+}
 /* -----------------------------------------
    Page Name 1
 ----------------------------------------- */
