added new files

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -52,7 +52,7 @@ html(class="no-js", lang="en")
               
           .row
             div(class='twelve columns')
-              h4 Output
+              h4 Output this will autoreload in my browser
               strong This is the output that would be presented in a production environment
               .panel
                 ul.event-container
@@ -77,7 +77,7 @@ html(class="no-js", lang="en")
               p Trigger a client event that gets published to the client application.
               
               h4 Trigger event 2
-              p Send a local event to the server.
+              p Send a client event to the server.
               
               h4 Trigger event 3
               p Trigger a client event that gets sent to the server, server then sends the event back to the client application that then handle the event.
