removed development stuff

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -95,4 +95,4 @@ html(class="no-js", lang="en")
     script(src='javascripts/app.js')
     script(src='javascripts/pubsub.js')
     script(src='javascripts/mustache.js')
-    | <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+    // | <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
