added viewport meta tag to fix scaling issue on mobile devices

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,7 +8,8 @@ mixin nice-button(css, target, text)
   - if(css)
   - css = css.concat(['nice', 'radius'])
   mixin button(css, target, text)
-  
+
+
 !!! html
 //if lt IE 7
     html(class="no-js ie6 oldie", lang="en")
@@ -21,6 +22,8 @@ html(class="no-js", lang="en")
   // <![endif]
   head
     meta(charset='utf-8')
+    meta(name='viewport', content='width=device-width', initial-scale='1.0')
+    
     title= title
     
     // include CSS Files
@@ -95,4 +98,4 @@ html(class="no-js", lang="en")
     script(src='javascripts/app.js')
     script(src='javascripts/pubsub.js')
     script(src='javascripts/mustache.js')
-    // | <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+            // | <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
