--- a/views/layout.jade
+++ b/views/layout.jade
@@ -55,7 +55,7 @@ html(class="no-js", lang="en")
               
           .row
             div(class='twelve columns')
-              h4 Output this will autoreload in my browser
+              h4 Output
               strong This is the output that would be presented in a production environment
               .panel
                 ul.event-container
